--- a/layout-test.html
+++ b/layout-test.html
@@ -9,11 +9,26 @@
 <body>
     <div class="container">
         <div class="fundo_albon">
-            <img src="fundo-azul.jpg" alt="">
+            <img src="img/fundo-azul.jpg" alt="">
         </div>
         <div class="inf">
-            <div id="nome"> Alex <strong><em>ALBON 23</em></strong></div>
-
+            <div id="nome"> 
+                <div class="piloto">
+                    Alex <strong><em>ALBON 23</em></strong>
+                </div> 
+                <div class="espaco" id="espaco"></div>
+                <div class="espaco">
+                    <img src="img/bandeira-tailandia.jpg" alt="">
+                </div>
+            </div>
+            <div class="l1">
+                <div>
+                     Equipe: <br> <div id="paralelogramo"> <img src="" alt=""> Williams </div>
+                </div>
+                <div>
+                    Nação: <br> <div id="paralelogramo"> Tailândia </div>
+                </div>
+            </div>
         </div>
         <div class="img">
             <img src="" alt="">
