--- a/layout-test.html
+++ b/layout-test.html
@@ -21,14 +21,41 @@
                     <img src="img/bandeira-tailandia.jpg" alt="">
                 </div>
             </div>
+            <strong>
             <div class="l1">
-                <div>
-                     Equipe: <br> <div id="paralelogramo"> <img src="" alt=""> Williams </div>
+                <div id="tit">
+                     Equipe: <br> <div id="paralelogramo"> <img src="" alt=""> &emsp13; Williams </div>
                 </div>
-                <div>
-                    Nação: <br> <div id="paralelogramo"> Tailândia </div>
+                <div id="tit">
+                    Nação: <br> <div id="paralelogramo"> &emsp13; Tailândia </div>
                 </div>
             </div>
+            <div class="l1">
+                <div id="tit">
+                     Equipe: <br> <div id="paralelogramo"> <img src="" alt=""> &emsp13; Williams </div>
+                </div>
+                <div id="tit">
+                    Nação: <br> <div id="paralelogramo"> &emsp13; Tailândia </div>
+                </div>
+            </div>
+            <div class="l1">
+                <div id="tit">
+                     Equipe: <br> <div id="paralelogramo"> <img src="" alt=""> &emsp13; Williams </div>
+                </div>
+                <div id="tit">
+                    Nação: <br> <div id="paralelogramo"> &emsp13; Tailândia </div>
+                </div>
+            </div>
+            <div class="l1">
+                <div id="tit">
+                     Equipe: <br> <div id="paralelogramo"> <img src="" alt=""> &emsp13; Williams </div>
+                </div>
+                <div id="tit">
+                    Nação: <br> <div id="paralelogramo"> &emsp13; Tailândia </div>
+                </div>
+            </div>
+            </strong>
+            
         </div>
         <div class="img">
             <img src="" alt="">
