--- a/index.html
+++ b/index.html
@@ -12,15 +12,61 @@
     </div>
     <div class="sombra"></div>
     <div class="container">
-        <div class="botoes">
+        <div class="botoes" id="button_index">
             <button onclick="" id="f1_24"> F1 2024 </button>
             <button onclick="" id="carreiras"> Carreiras </button>
-            <button onclick="" id="tempo"> T. de tempo </button>
+            <button onclick="mostrarTempo()" id="tempo"> T. de tempo </button>
             <button onclick="" id="campeonatos"> Campeonatos </button>
         </div>
         <div class="inf">
-
-        </div>
+            <div class="index">
+                <img src="img/monaco.png" alt="" id="e">
+                <img src="img/hamilton.png" alt="" id="d">
+                <img src="img/hamiltonverstappen.png" alt="" id="c">
+                <img src="img/vitoria.png" alt="" id="b">
+                <img src="img/largada.png" alt="" id="a">
+                <h1> F1 2024 </h1>
+            </div>
+    </div>
+    <div class="container">
+            <div class="botoes" id="button_tempo">
+                <div id="botao">
+                    <img src="img/gp_bahrein.png" onclick="">
+                    <button> BAHREIN </button>
+                </div>
+                <img src="img/gp_arabia.png" onclick="">
+                <img src="img/gp_austrália.png" onclick="">
+                <img src="" onclick="">
+                <img src="" onclick="">
+                <img src="" onclick="">
+                <img src="" onclick="">
+                <img src="" onclick="">
+                <img src="" onclick="">
+                <img src="" onclick="">
+                <img src="" onclick="">
+                <img src="" onclick="">
+                <img src="" onclick="">
+            </div>
+            <div class="tempo_index"> 
+                <div id="conjunto">
+                    <div id="posicao"> 1° </div>
+                    <div id="pessoa"></div>
+                    <div id="piloto"></div>
+                    <div id="recorde"></div>
+                </div>
+                <div id="conjunto">
+                    <div id="posicao"> 2° </div>
+                    <div id="pessoa"></div>
+                    <div id="piloto"></div>
+                    <div id="recorde"></div>
+                </div>
+                <div id="conjunto">
+                    <div id="posicao"> 3° </div>
+                    <div id="pessoa"></div>
+                    <div id="piloto"></div>
+                    <div id="recorde"></div>
+                </div>
+            </div>
     </div>
     <script src="script.js"></script>
 </body>
